<resources>
    <string name="app_name">Friendzr</string>
    <string name="facebook_app_id">593741112300434</string>
    <string name="fb_login_protocol_scheme">fb593741112300434</string>
    <string name="facebook_client_token" translatable="false">ac7594f420d6752d787025fa8df7889a</string>
    <string name="api_key">AIzaSyCLmWYc00w0KZ-qj8hIymWCIs8K5Z0cG0g</string>
    <string name="getStarted">GET STARTED</string>
    <string name="next">Next</string>
    <string name="intro1_title">This is the first sentence n\This is the second scentence n\This is the third sentence</string>
    <string name="guidelines">Community Guidelines</string>
    <string name="signupWithMail">SIGN UP WITH EMAIL</string>
    <string name="signupWithFB">SIGN UP WITH FACEBOOK</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signupWithGoogle">SIGN UP WITH GOOGLE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="or">OR</string>
    <string name="Donthaveanaccount">Don\'t have an account? </string>
    <string name="signUp">Sign up</string>
    <string name="UserName">User name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="agreeTermsSignup">By clicking Sign up you agree to our terms of usage <a href="https://friendzr.com/terms-conditions/">See more</a> \nYour data will be securely stored, only used by Friendzr and never shared without permission.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_map">Map</string>
    <string name="title_feed">Feed</string>
    <string name="title_requests">Requests</string>
    <string name="title_more">More</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="total_requests">Total Requests</string>
    <string name="message">Message</string>
    <string name="request_removed">Request Removed</string>
    <string name="SendRequest">Send Request</string>
    <string name="title_profile">My Profile</string>
    <string name="title_events">My Events</string>
    <string name="title_settings">Settings</string>
    <string name="title_contactus">Contact Friendzr</string>
    <string name="title_aboutUs">About us</string>
    <string name="title_termsAndCondotions">Terms and conditions</string>
    <string name="title_share">Share</string>
    <string name="title_logout">Logout</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="title_edit">Edit</string>
    <string name="accounts">Accounts</string>
    <string name="sendRequest">Send Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="block">Block</string>
    <string name="title_total">Total Event</string>
    <string name="title_date">Date of Birth</string>
    <string name="title_tags">Tags</string>
    <string name="title_male">Male</string>
    <string name="title_female">Female</string>
    <string name="title_other">Other Gender</string>
    <string name="title_aboutMe">More about me</string>
    <string name="linkedAccounts">Link Accounts</string>
    <string name="title_instagram">Instagram</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_sapchat">Snapchat</string>
    <string name="title_tiktok">Tiktok</string>
    <string name="date">Date</string>
    <string name="title_time">Time</string>
    <string name="title_attendance">Attendees:</string>
    <string name="attendance">Attendance</string>
    <string name="title_interests">Interests</string>
    <string name="title_join">Join</string>
    <string name="title_left">Left</string>
    <string name="title_editEvent">Edit Event</string>
    <string name="title_eventTitle">Event Title</string>
    <string name="title_save">Save</string>
    <string name="title_deleteEvent">DELETE EVENT</string>
    <string name="title_allDay">All-day</string>
    <string name="datefrom">Date from:</string>
    <string name="selectDade">Select Date</string>
    <string name="timefrom">Time from:</string>
    <string name="dateTo">Date To:</string>
    <string name="timeTo">Time To:</string>
    <string name="selectTime">Select Time</string>
    <string name="title_limitNumberForUsers">Max number of attendees</string>
    <string name="title_addEvent">Add Event</string>
    <string name="title_add">Add</string>
    <string name="title_description">Description</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signOutmessage">Are you sure you want to Logout Friendzr</string>
    <string name="caution">Caution</string>
    <string name="termsUrl">https://friendzr.com/</string>
    <string name="url_aboutUs">https://friendzr.com/about-us/</string>
    <string name="url_share">http://onelink.to/friendzr</string>
    <string name="url_tips_and_guidance">https://friendzr.com/tips-and-guidance/</string>
    <string name="title_ghostMode">Private Modes</string>
    <string name="title_pushNotifications">Push Notifications</string>
    <string name="title_allowMyLocation">Allow My Location</string>
    <string name="title_deleteAccount">Delete Account</string>
    <string name="PermissionGranted">Permission granted</string>
    <string name="PermissionDenied">Permission denied</string>
    <string name="loginCancel">Login canceled</string>
    <string name="d">d</string>
    <string name="default_notification_channel_id">100</string>
    <string name="channel_name">name</string>
    <string name="channel_description">description</string>
    <string name="title_forgetPassword">Forget password</string>
    <string name="send">Send</string>
    <string name="title_oldPassword">Old Password</string>
    <string name="title_newPassword">New Password</string>
    <string name="title_confirmNewPassword">Confirm New Password</string>
    <string name="error_username_register">Enter user name</string>
    <string name="error_email">enter valid email</string>
    <string name="error_password">password must be at least 8 digits</string>
    <string name="error_confirm_password">Confirm password not like Password</string>
    <string name="no_request_yet">No Requests Yet</string>
    <string name="request_Sent">Request Sent</string>
    <string name="select_image">Select Image</string>
    <string name="cancel">Cancel</string>
    <string name="registration_success">Congratulations,\n Account has been successfully registered,Please confirm your email</string>
    <string name="genderDistribution">Gender Distribution</string>
    <string name="undefined">Undefined</string>
    <string name="title_changePassword">Change Password</string>
    <string name="title_filterAccordingAge">Filtring according age</string>
    <string name="title_manualDistanceControl">Manual distance control</string>
    <string name="title_hideFrom">Hide from</string>
    <string name="everyOne">Everyone</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="error_event_title">Enter Event Title</string>
    <string name="error_event_category">Select event category</string>
    <string name="error_event_datefrom">Select event start date</string>
    <string name="error_event_timefrom">Select start time</string>
    <string name="error_event_dateto">Select end date</string>
    <string name="error_event_timeto">Select end Time</string>
    <string name="error_event_description">Enter event description</string>
    <string name="error_event_limit_number">Enter number of users</string>
    <string name="title_leaveEvent">Leave</string>
    <string name="see_more">See More</string>
    <string name="all_Attendance">All Attendance</string>
    <string name="no_attendance_yet">No Attendance Yet</string>
    <string name="category">Select Category</string>
    <string name="remove">Remove</string>
    <string name="noData">No Data</string>
    <string name="write_a_message">Write a message...</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="my_friends">My Friends</string>
    <string name="attach_media">Attach Media</string>
    <string name="photo">Photo</string>
    <string name="attach_message">What would you like to attach?</string>
    <string name="file">File</string>
    <string name="km">Km</string>
    <string name="accept">Accept</string>
    <string name="select_manual_distance">Select Manual Distance</string>
    <string name="url_terms">https://friendzr.com/terms-conditions/</string>
    <string name="loginWithFaceBook">Login with Facebook</string>
    <string name="loginWithGoogle">Login with Google</string>
    <string name="enter_bio">Please enter your bio</string>
    <string name="profile_updated">Profile Updated Successfully</string>
    <string name="max_tags_numbers_error">Maximum 8 tags</string>
    <string name="max_tags_four_numbers_error">Maximum 4 tags</string>
    <string name="error_username_not_valid">user name should be at least 2 letters and at most 32 letters</string>
    <string name="select_location_first">Please select the event location first</string>
    <string name="delete_event_message">are you sure you want to Delete this  event ?</string>
    <string name="chechMailMessage">"Please check your mail "</string>
    <string name="no_events_yet">No Events Yet</string>
    <string name="no_notifications_yet">No Notifications Yet</string>
    <string name="you_are_not_friend_with_this_account">You are no longer connected to this Friendzr. Reconnect to message them</string>
    <string name="no_friends_yet">No Friends Yet</string>
    <string name="select_tag_enjoy_message">Please select at least one (I enjoy) tag</string>
    <string name="select_tag_prefer_message">Please select at least one (I prefer) tag</string>
    <string name="select_tag_iam_message">Please select at least one (I am) tag</string>
    <string name="title_Confirm">Confirm?</string>
    <string name="title_dialog_confirm_subtitle">Your verification email should arrive straight away. Can’t see it? Check your Junk folder and add hello@friendzr.com to your safe senders’ list.</string>
    <string name="title_PrivateModes">Private mode</string>
    <string name="title_search">Search...</string>
    <string name="title_create_group">Create group</string>
    <string name="title_group_name">Group Name:</string>
    <string name="hint_group_name">Group Name</string>
    <string name="title_group_member">Group Member:</string>
    <string name="title_done">Done</string>
    <string name="title_add_users">Add Users</string>
    <string name="title_verify">Verify</string>
    <string name="text_verification_1">Images with a face that occupies a larger portion of the image, are matched with greater accuracy.</string>
    <string name="text_verification_2">You should be the only person in the photograph.</string>
    <string name="text_verification_3">Click below to take a selfie and verify your uploaded photo.</string>
    <string name="text_verification_5">The selfie is not saved or used</string>
    <string name="title_community">My Hub</string>
    <string name="title_event">Events</string>
</resources>