<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:background="@drawable/shape_round"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_dialog_ghost_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/title_PrivateModes"
        android:textColor="@color/title_black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_dialog_ghost_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/d_8"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/title_hideFrom" />


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/everyOneBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/mode_checkbox_selector"
        android:backgroundTint="@color/everyOneColorActive"
        android:button="@null"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/everyOne"
        android:textColor="@color/white"
        android:textSize="12sp" />


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/menBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/mode_checkbox_selector"
        android:backgroundTint="@color/menColorActive"
        android:button="@null"
        android:buttonTintMode="add"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/men"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/womenBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/mode_checkbox_selector"
        android:backgroundTint="@color/womenColorActive"
        android:button="@null"
        android:buttonTintMode="add"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/women"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/otherGenderBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/mode_checkbox_selector"
        android:backgroundTint="@color/otherGenderColorActive"
        android:button="@null"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/title_other"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/savePrivateModeBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_send_request"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/title_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="47dp"
        android:textAlignment="center"
        android:visibility="gone"
        app:cardBackgroundColor="@color/delete"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>
</LinearLayout>