<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_group_appbarContainer"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_close_black" />


        <TextView
            android:id="@+id/tv_inbox_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/title_create_group"
            android:textColor="@color/inactive_black" />

        <TextView
            android:id="@+id/tv_edit_group_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/title_edit"
            android:textColor="@color/inactive_black"
            android:visibility="gone"
            tools:visibility="gone" />

    </RelativeLayout>

    <EditText
        android:id="@+id/searchEdt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_round_for_edt"
        android:descendantFocusability="blocksDescendants"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/title_search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:queryHint="@string/title_inbox"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_group_appbarContainer"
        app:showAsAction="always" />


    <RelativeLayout
        android:id="@+id/image_create_group_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEdt">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_group"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_large_logo" />

        <ImageView
            android:id="@+id/imgUserProfileCamera"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="75dp"
            android:elevation="10dp"
            android:src="@drawable/ic_camers" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_group_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/title_group_name"
        android:textColor="@color/inactive_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_create_group_container" />


    <EditText
        android:id="@+id/group_name_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_round_for_edt"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_group_name"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_group_name_title"
        app:layout_constraintTop_toBottomOf="@id/tv_group_name_title" />


    <TextView
        android:id="@+id/tv_group_member_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/title_group_member"
        android:textColor="@color/inactive_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_name_edit" />


    <TextView
        android:id="@+id/tv_group_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/title_add_users"
        android:textColor="@color/inactive_black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tv_group_member_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/tv_group_member_title"
        app:layout_constraintTop_toTopOf="@id/tv_group_member_title"
        tools:visibility="visible" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/group_member_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/create_group_button_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_group_member_title"
        tools:itemCount="5"
        tools:listitem="@layout/item_feed" />


    <Button
        android:id="@+id/create_group_button_done"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_send_request"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/title_done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>